# llm-experiment-system

./: README.md  automate_experiment.py  main.py  pyproject.toml
backend/: main.py  prompts.py
frontend/: index.html
